7128352: assert(obj_node == obj) failed

Compare uncasted object nodes.

Reviewed-by: never